# phantomx_pincher

./: .gitignore  README.md
phantom_matlab/: Control_GUI.m  get_actual_joints_values.m  get_actual_pose.m  get_ik.m  joy2joints_msgs.m  send2home.m  set_manual_mode.m  set_running_mode_GUI.m  set_waiting_mode_GUI.m  start_ROS_MATLAB_GUI.m  update_camera_image.m  update_gui_fields.m
phantomx_description/: CMakeLists.txt  package.xml
phantomx_description/launch/: rviz.launch
phantomx_description/rviz/: config.rviz
phantomx_description/urdf/: macros.xacro  phantom_description.urdf  phantom_description.xacro  phantom_description.xacro.b2  phantom_descriptiono.xacro  robot_parameters.xacro
phantomx_description/xacro/: macros.xacro  phantom_description.xacro  robot_parameters.xacro
phantomx_gazebo/: CMakeLists.txt  msg_sample.md  package.xml
phantomx_gazebo/config/: controllers.yaml
phantomx_gazebo/launch/: phantomx_gazebo.launch
phantomx_gazebo/media/: ground.material
phantomx_gazebo/worlds/: empty.world  stage_01.world  stage_02.world
phantomx_matlab/: Control_GUI.fig  Control_GUI.m  fix_actual_pose.m  get_ik.m  get_pose.m  joy2joints_msgs.m  joy2joints_msgs.m~  reset_world_and_gui.m  send2point.m  sendROSmsg.m  set_automatic_mode.m  start_ROS_MATLAB_GUI.m  start_task.m  stop_task.m  stop_timers.m
phantomx_pincher/: CMakeLists.txt  package.xml
phantomx_teleop/: CMakeLists.txt  joy_msg_sample.md  package.xml
phantomx_teleop/launch/: keys2joy.launch
phantomx_teleop/src/: joy2joints.py  key2joy.py  key_publisher.py
(+32 files in other folders)
